<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiCabinet</string>
    <string name="menu_scan">Scan</string>
    <string name="hint_username">username</string>
    <string name="hint_password">Password</string>
    <string name="chk_remember">remember me</string>
    <string name="btn_login">Login</string>
    <string name="hint_no_network">No available network!</string>
    <string name="activity_login">MiCabinet</string>
    <string name="img_cover">Cover</string>
    <string name="txt_title">Title</string>
    <string name="txt_borrower">Borrower</string>
    <string name="txt_borrow_date">Borrow Date</string>
    <string name="txt_planed_return_date">Planned Return Date</string>
    <string name="txt_returned_date">Returned Date</string>
    <string name="lbl_borrower">Borrower:</string>
    <string name="lbl_borrow_date">Borrow Date:</string>
    <string name="lbl_planed_return_date">Planned Return Date:</string>
    <string name="lbl_returned_date">Returned Date:</string>
    <string name="img_planed_return_date">Planned Return Date</string>
    <string name="img_borrow_date">Borrow Date</string>
    <string name="img_returned_date">Returned Date</string>
    <string name="img_borrower">Borrower</string>
    <string name="img_avatar">Avatar</string>
    <string name="txt_username">Username</string>
    <string name="txt_remark">No Remark</string>
    <string name="txt_status">Status</string>
    <string name="img_status">Status</string>
    <string name="img_remark">Remark</string>
    <string name="error_login">Login failed!</string>
    <string name="page_books">Books</string>
    <string name="page_friends">Friends</string>
    <string name="page_messages">Messages</string>
    <string name="page_account">Account</string>
    <string name="books_mine">Mine</string>
    <string name="books_loaned">Loaned</string>
    <string name="books_borrowed">Borrowed</string>
    <string name="friends_following">Following</string>
    <string name="friends_follower">Follower</string>
    <string name="success_add_book">Book added!</string>
    <string name="failed_add_book">Adid Book failed!</string>
    <string name="hint_no_remark">No Remark</string>
    <string name="status_available">Available</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_loaned">Loaned</string>
    <string name="status_lost">Lost</string>
    <string name="hint_not_returned">Not returned yet</string>
    <string name="pref_summary">http://sichu.sinaapp.com</string>
    <string name="pref_title">MiCabinet v1.0</string>
    <string name="pref_accounts">Accounts</string>
    <string name="pref_logout">Logout</string>
    <string name="btn_login_by_weibo">Login by Weibo</string>
    <string name="title_activity_splash">MiCabinet</string>
    <string name="txt_slogan">Share Books with Your Friends</string>
    <string name="hint_bind_weibo">Bind Weibo</string>
    <string name="title_unbind_weibo">Unbind Weibo</string>
    <string name="msg_unbind_weibo">Do you want to unbind weibo?</string>
    <string name="txt_requester">Requester</string>
    <string name="txt_book">Book Title</string>
    <string name="txt_planned_return_date">2013-01-16</string>
    <string name="txt_datetime">2013-01-03 03:22</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_reject">Reject</string>
    <string name="lbl_request_time">Request Time:</string>
    <string name="lbl_book">Want to Borrow:</string>
    <string name="lbl_planned_return_date">Planned Return Date:</string>
    <string name="lbl_remark">Remark:</string>
    <string name="lbl_type">Want to Borrow</string>
    <string name="pref_others">Others</string>
    <string name="pref_title_feedbacks">Feedbacks</string>
    <string name="menu_sync">Sync</string>
    <string name="msg_login">Login, Please wait...</string>
    <string name="title_following">Follow us</string>
    <string name="txt_auth_ok">Your weibo account is authorized!</string>
    <string name="msg_following">Follow us in weibo.</string>
    <string name="hint_borrow_to">Borrow to %1$s?</string>
    <string name="menu_agree">Agree</string>
    <string name="menu_reject">Reject</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="title_booksedit">Edit</string>
    <string name="msg_edit_bookown">Save bookownership info success!</string>
    <string name="err_edit_bookown">Save bookownership info failed!</string>
    <string name="title_delete_bookown">Remove Book</string>
    <string name="msg_delete_bookown">Do you really want to remove this book?</string>
    <string name="err_delete_bookown">Remove book failed!</string>
    <string name="friends_may_know">May Know</string>
    <string name="title_activity_invite_weibo_friend">InviteWeiboFriendActivity</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="messages_borrow_request">Borrow Requests</string>
    <string name="lbl_author">Author:</string>
    <string name="lbl_isbn">ISBN:</string>
    <string name="btn_douban">" DouBan"</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="err_get_loaned">Get borrow record error!</string>
    <string name="title_chk_book_return">Check Book Return</string>
    <string name="msg_chk_book_return">Is this book returned to you?</string>
    <string name="err_chk_book_return">Check book return failed!</string>
    <string name="ok_chk_book_return">Check book return success!</string>
    <string name="lbl_owner">Owner:</string>
    <string name="lbl_status">Status:</string>
    <string name="title_borrow_book_activity">Borrow Book</string>
    <string name="btn_return_date">Select Return Date ...</string>
    <string name="err_return_date">Return date should be some day after today!</string>
    <string name="ok_send_borrow_req">Borrow Request sent!</string>
    <string name="err_send_borrow_req">Send borrow request failed!</string>
    <string name="lbl_borrow">Book Borrow Request</string>
    <string name="hint_remark">Remark</string>
    <string name="btn_send_request">Send Request</string>
    <string name="hint_set_return_date">Please select return date first!</string>
    <string name="lbl_owns">"Owns: "</string>
    <string name="lbl_loaned">"Loaned: "</string>
    <string name="lbl_borrowed">"Borrowed: "</string>
    <string name="err_load_book_list">Load book list error!</string>
    <string name="btn_action_invite">Invite</string>
    <string name="btn_action_follow">Follow</string>
    <string name="err_get_numbers">Get user book info failed!</string>
    <string name="hint_edit_remark">Remark</string>
    <string name="txt_unavailable">This book is temporally unavailable!</string>
    <string name="btn_send">Send</string>
    <string name="msg_invite_weibo_friend">Hi, %1$s, I have some books to share with you! You can see them from follow link : http://sichu.sinaapp.com/cabinet/user/%2$d/ </string>
    <string name="err_invite_weibo_friend">Invite friends failed!</string>
    <string name="ok_invite_weibo_friend">Invite friends success!</string>
    <string name="title_process_borrow_request">Process Borrow Request</string>
    <string name="msg_process_borrow_request">Do you want to borrow %1$s to %2$s?</string>
    <string name="status_unread">-(Unread)</string>
    <string name="status_agree">-(Agree)</string>
    <string name="status_reject">-(Reject)</string>
    <string name="err_process_request">Process request failed!</string>
    <string name="ok_process_request">Borrow request proccessed!</string>
    <string name="lbl_bind_weibo">We can find weibo friends for you after you bind weibo account!</string>
    <string name="hint_no_follower">You currently do not have followers!</string>
    <string name="hint_no_following">You have not follow anyone yet!</string>
    <string name="hint_no_message">Have no borrow request now!</string>
    <string name="hint_no_book">Click button at right top corner to scan one!</string>
    <string name="hint_no_loaned">Have no loaned record yet!</string>
    <string name="hint_no_borrowed">Have no borrow record yet!</string>
    <string name="msg_sync_ok">Sync OK! %1$d added, %2$d updated, %3$d deleted!</string>
    <string name="hint_exit">Press once again to exit!</string>
    <string name="ok_follow">Follow success!</string>
    <string name="err_follow">Follow failed!</string>
    <string name="err_login_by_weibo">Login by weibo error!</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password_2">Input Password Again</string>
    <string name="empty_username">username cannot be empty!</string>
    <string name="empty_email">email cannot be empty!</string>
    <string name="err_password_too_short">password shoould not less than 6 characters!</string>
    <string name="err_password_not_consistence">password not consistence!</string>
    <string name="err_username_not_available">username not available!</string>
    <string name="err_email_not_available">email not available!</string>
    <string name="err_register">Register error!</string>
    <string name="menu_export">export</string>
    <string name="title_activity_export">Export</string>
    <string name="btn_export">Export</string>
    <string name="hint_export">Input your email below, we will send you exported csv!</string>
    <string name="export_ok">Your export request has been sent, please check your email a few minutes later!</string>
    <string name="export_failed">Export failed!</string>
    <string name="hint_bind_email">Bind email</string>
    <string name="title_activity_bind_email">BindEmailActivity</string>
    <string name="btn_verify">Verify</string>
    <string name="verify_ok">An email has sent to your email, please follow link in the email to finish verify process!</string>
    <string name="verify_failed">Verify email failed!</string>
    <string name="btn_go_verify">Verify!</string>
    <string name="hint_go_verify">Verify email, save your time on next exports!</string>
    <string name="menu_more">More</string>
    <string name="menu_add">Add</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="btn_add">Add</string>
    <string name="hint_isbn">ISBN</string>
    <string name="err_email_not_valid">Email not valid!</string>
    <string name="err_empty_isbn">ISBN cannot be empty</string>
    <string name="hint_filter">Title/Author/Remark</string>

    <string-array name="drawer_menus">
        <item>Books</item>
        <item>Friends</item>
        <item>Messages</item>
        <item>Account</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>

</resources>