<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto" >

    <Preference
        holo:icon="@drawable/ic_launcher"
        holo:selectable="false"
        holo:summary="@string/pref_summary"
        holo:title="@string/pref_title" />

    <PreferenceCategory holo:title="@string/pref_accounts" >
        <Preference
            holo:icon="@drawable/ic_contact"
            holo:key="pref_key_account" />
        <Preference
            holo:icon="@drawable/ic_email"
            holo:key="pref_key_email" />
        <Preference
            holo:icon="@drawable/ic_weibo"
            holo:key="pref_key_weibo"
            holo:title="@string/hint_bind_weibo" />
    </PreferenceCategory>
    <PreferenceCategory holo:title="@string/pref_others" >
        <Preference
            holo:icon="@drawable/ic_feedback"
            holo:key="pref_key_feedback"
            holo:title="@string/pref_title_feedbacks" />
        <Preference
            holo:icon="@drawable/ic_logout"
            holo:key="pref_key_logout"
            holo:selectable="true"
            holo:title="@string/pref_logout" />
    </PreferenceCategory>

</PreferenceScreen>