<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/menu_scan"
                android:icon="@drawable/ic_barcode"
                android:title="@string/menu_scan"/>
            <item
                android:id="@+id/menu_add"
                android:icon="@drawable/ic_action_new"
                android:title="@string/menu_add"/>
            <item
                android:id="@+id/menu_export"
                android:icon="@drawable/ic_action_download"
                android:title="@string/menu_export"/>
        </menu>
    </item>

</menu>