<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <EditText 
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_username"/>
    
    <EditText 
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"/>
    
    <CheckBox android:id="@+id/chk_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chk_remember"/>
    
    <Button android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
