<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_book"
        android:contentDescription="@string/img_cover"
        android:padding="5dp"
        android:src="@drawable/ic_book" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/img_borrower"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/txt_title"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_borrower"
            android:src="@drawable/ic_contact" />

        <TextView
            android:id="@+id/txt_borrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img_borrower"
            android:text="@string/txt_borrower" />

        <ImageView
            android:id="@+id/img_borrow_date"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/img_borrower"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_borrow_date"
            android:src="@drawable/ic_borrow" />

        <TextView
            android:id="@+id/txt_borrow_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_borrower"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img_borrow_date"
            android:text="@string/txt_borrow_date" />

        <ImageView
            android:id="@+id/img_planed_return_date"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/img_borrow_date"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_planed_return_date"
            android:src="@drawable/ic_timer" />

        <TextView
            android:id="@+id/txt_planed_return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_borrow_date"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img_planed_return_date"
            android:text="@string/txt_planed_return_date" />

        <ImageView
            android:id="@+id/img_returned_date"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/img_planed_return_date"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/img_returned_date"
            android:src="@drawable/ic_return" />

        <TextView
            android:id="@+id/txt_returned_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_planed_return_date"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img_returned_date"
            android:text="@string/txt_returned_date" />
    </RelativeLayout>

</LinearLayout>