<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:padding="10dp"
        android:src="@drawable/ic_book"
        android:contentDescription="@string/img_cover" />

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <ImageView android:id="@+id/img_status"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/txt_title"
            android:src="@drawable/ic_available"
            android:contentDescription="@string/img_status" />
        
        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/img_status"
            android:text="@string/txt_status" />

        <ImageView android:id="@+id/img_remark"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/img_status"
            android:src="@drawable/ic_remark"
            android:contentDescription="@string/img_remark"/>
        
        <TextView
            android:id="@+id/txt_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_status"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/img_remark"
            android:text="@string/txt_remark" />
    </RelativeLayout>

</LinearLayout>