<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"    
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:src="@drawable/ic_contact"
        android:contentDescription="@string/img_avatar" />
    
    <Button android:id="@+id/btn_action"
        android:layout_width="90dp"
        android:layout_height="40dp"        
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:text="Action"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="100dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_remark" />
    </LinearLayout>    

</RelativeLayout>